navigation bar fix on mobile & deskptop

--- a/front-end/styles/style.css
+++ b/front-end/styles/style.css
@@ -1,10 +1,15 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body,
 html,
 #__next {
-  margin: 0;
-  padding: 0;
   height: 100%;
 }
+
 
 .container {
   min-height: 100%;
@@ -89,4 +94,9 @@ html,
   right: 0;
   width: 100%;
   height: 100%;
+}
+
+
+li {
+  margin: 0;
 }
